[package]
name = "stevedore_ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10.2", features = ["tls"] }
prost = "0.12.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
openssl = "0.10.62"

[build-dependencies]
tonic-build = "0.10.2"
